package GUI;
import factory.Factory;
import Procesos.*;

public class Login extends javax.swing.JFrame {
    
    private static Factory factory;
    
    /**
     * Creates new form Login
     */
    public Login() {
        initComponents();
        this.setLocationRelativeTo(null);
        factory = new Factory();
        
    }

    /**
     * This method is called from within the constructor to initialize the form.
     * WARNING: Do NOT modify this code. The content of this method is always
     * regenerated by the Form Editor.
     */
    @SuppressWarnings("unchecked")
    // <editor-fold defaultstate="collapsed" desc="Generated Code">//GEN-BEGIN:initComponents
    private void initComponents() {

        lbl_usuario = new javax.swing.JLabel();
        lbl_contrasena = new javax.swing.JLabel();
        txt_usuario = new javax.swing.JTextField();
        btn_aceptar = new javax.swing.JButton();
        btn_cancelar = new javax.swing.JButton();
        txt_contrasena = new javax.swing.JPasswordField();
        lbl_registrarse = new javax.swing.JLabel();
        fondousu = new javax.swing.JLabel();
        fondo = new javax.swing.JLabel();

        setDefaultCloseOperation(javax.swing.WindowConstants.EXIT_ON_CLOSE);
        setTitle("Inicio de Sesion");
        setResizable(false);
        getContentPane().setLayout(new org.netbeans.lib.awtextra.AbsoluteLayout());

        lbl_usuario.setBackground(new java.awt.Color(255, 255, 255));
        lbl_usuario.setFont(new java.awt.Font("Roboto", 1, 24)); // NOI18N
        lbl_usuario.setForeground(new java.awt.Color(240, 240, 240));
        lbl_usuario.setText("Usuario:");
        getContentPane().add(lbl_usuario, new org.netbeans.lib.awtextra.AbsoluteConstraints(90, 110, -1, -1));

        lbl_contrasena.setBackground(new java.awt.Color(255, 255, 255));
        lbl_contrasena.setFont(new java.awt.Font("Roboto", 1, 24)); // NOI18N
        lbl_contrasena.setForeground(new java.awt.Color(240, 240, 240));
        lbl_contrasena.setText("Contraseña:");
        getContentPane().add(lbl_contrasena, new org.netbeans.lib.awtextra.AbsoluteConstraints(90, 190, -1, -1));

        txt_usuario.setFont(new java.awt.Font("Roboto", 1, 18)); // NOI18N
        getContentPane().add(txt_usuario, new org.netbeans.lib.awtextra.AbsoluteConstraints(240, 110, 240, 30));

        btn_aceptar.setBackground(new java.awt.Color(255, 255, 255));
        btn_aceptar.setFont(new java.awt.Font("Roboto", 0, 24)); // NOI18N
        btn_aceptar.setText("Aceptar");
        btn_aceptar.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                btn_aceptarActionPerformed(evt);
            }
        });
        getContentPane().add(btn_aceptar, new org.netbeans.lib.awtextra.AbsoluteConstraints(70, 270, 170, 50));

        btn_cancelar.setBackground(new java.awt.Color(255, 255, 255));
        btn_cancelar.setFont(new java.awt.Font("Roboto", 0, 24)); // NOI18N
        btn_cancelar.setText("Cancelar");
        btn_cancelar.addActionListener(new java.awt.event.ActionListener() {
            public void actionPerformed(java.awt.event.ActionEvent evt) {
                btn_cancelarActionPerformed(evt);
            }
        });
        getContentPane().add(btn_cancelar, new org.netbeans.lib.awtextra.AbsoluteConstraints(310, 270, 180, 50));

        txt_contrasena.setFont(new java.awt.Font("Roboto", 1, 18)); // NOI18N
        getContentPane().add(txt_contrasena, new org.netbeans.lib.awtextra.AbsoluteConstraints(240, 190, 240, 30));

        lbl_registrarse.setBackground(new java.awt.Color(255, 255, 255));
        lbl_registrarse.setFont(new java.awt.Font("Roboto", 1, 24)); // NOI18N
        lbl_registrarse.setForeground(new java.awt.Color(240, 240, 240));
        lbl_registrarse.setText("Registrarse");
        lbl_registrarse.setCursor(new java.awt.Cursor(java.awt.Cursor.HAND_CURSOR));
        lbl_registrarse.addMouseListener(new java.awt.event.MouseAdapter() {
            public void mouseClicked(java.awt.event.MouseEvent evt) {
                lbl_registrarseMouseClicked(evt);
            }
        });
        getContentPane().add(lbl_registrarse, new org.netbeans.lib.awtextra.AbsoluteConstraints(610, 320, -1, -1));

        fondousu.setIcon(new javax.swing.ImageIcon(getClass().getResource("/Resources/login/LoginIcon.png"))); // NOI18N
        getContentPane().add(fondousu, new org.netbeans.lib.awtextra.AbsoluteConstraints(540, 70, -1, -1));

        fondo.setIcon(new javax.swing.ImageIcon(getClass().getResource("/Resources/login/fondo 1.jpg"))); // NOI18N
        getContentPane().add(fondo, new org.netbeans.lib.awtextra.AbsoluteConstraints(0, 0, 820, 430));

        pack();
    }// </editor-fold>//GEN-END:initComponents

    //Codigo a ejecutar al presionar el boton "Cancelar"
    private void btn_cancelarActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_btn_cancelarActionPerformed
        this.dispose();
    }//GEN-LAST:event_btn_cancelarActionPerformed
    
    //Codigo a ejecutar al presionar el boton "Aceptar"
    private void btn_aceptarActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_btn_aceptarActionPerformed
        String Usuario = this.txt_usuario.getText();
        String contrasena = this.txt_contrasena.getText();
        BaseDatos sesion = factory.baseDatos();
        boolean aprovada = sesion.ValidarLogin(Usuario, contrasena);
        
        if (aprovada == true){
            if(sesion.obtenerRol(Usuario).equals("Cliente")){
                GUICliente principal = factory.GUIprincipal(Usuario);
                principal.setVisible(true);
                this.setVisible(false); 
            }
            else{
                GUIVendedor principal = factory.GUIvendedor(Usuario);
                principal.setVisible(true);
                this.setVisible(false);
            }
        }
    }//GEN-LAST:event_btn_aceptarActionPerformed

   //Codigo al presionar el label de Registrarse
    private void lbl_registrarseMouseClicked(java.awt.event.MouseEvent evt) {//GEN-FIRST:event_lbl_registrarseMouseClicked
        Registro form = factory.registro(); 
        form.setVisible (true); 
    }//GEN-LAST:event_lbl_registrarseMouseClicked

    /**
     * @param args the command line arguments
     */
    public static void main(String args[]) {

        /* Set the Nimbus look and feel */
        //<editor-fold defaultstate="collapsed" desc=" Look and feel setting code (optional) ">
        /* If Nimbus (introduced in Java SE 6) is not available, stay with the default look and feel.
         * For details see http://download.oracle.com/javase/tutorial/uiswing/lookandfeel/plaf.html 
         */
        try {
            for (javax.swing.UIManager.LookAndFeelInfo info : javax.swing.UIManager.getInstalledLookAndFeels()) {
                if ("Nimbus".equals(info.getName())) {
                    javax.swing.UIManager.setLookAndFeel(info.getClassName());
                    break;
                }
            }
        } catch (ClassNotFoundException ex) {
            java.util.logging.Logger.getLogger(Login.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
        } catch (InstantiationException ex) {
            java.util.logging.Logger.getLogger(Login.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
        } catch (IllegalAccessException ex) {
            java.util.logging.Logger.getLogger(Login.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
        } catch (javax.swing.UnsupportedLookAndFeelException ex) {
            java.util.logging.Logger.getLogger(Login.class.getName()).log(java.util.logging.Level.SEVERE, null, ex);
        }
        //</editor-fold>

        /* Create and display the form */
        java.awt.EventQueue.invokeLater(new Runnable() {
            public void run() {
                new Login().setVisible(true);
            }
        });
    }

    // Variables declaration - do not modify//GEN-BEGIN:variables
    private javax.swing.JButton btn_aceptar;
    private javax.swing.JButton btn_cancelar;
    private javax.swing.JLabel fondo;
    private javax.swing.JLabel fondousu;
    private javax.swing.JLabel lbl_contrasena;
    private javax.swing.JLabel lbl_registrarse;
    private javax.swing.JLabel lbl_usuario;
    private javax.swing.JPasswordField txt_contrasena;
    private javax.swing.JTextField txt_usuario;
    // End of variables declaration//GEN-END:variables
}
